# blecon-device-sdk

./: CMakeLists.txt  README.md  west.yml
cmake/: blecon-prebuilt.cmake  blecon-toolchain.cmake
examples/: README.md
examples/nrf5/: CMakeLists.txt  README.md  blecon_app.h  hello-world.c  large-request.c  main.c  nrf_log_backend_stdout.c  scanner.c
examples/nrf5/nrf5-sdk/: CMakeLists.txt  nrf5-sdk_v17.1.0.patch
examples/nrf5/nrf5-sdk/config/: sdk_config.h
examples/nrf5/nrf5-sdk/linker/: blecon_nrf52810_xxaa.ld  blecon_nrf52832_xxaa.ld  blecon_nrf52833_xxaa.ld  blecon_nrf52840_xxaa.ld
examples/zephyr/: CMakeLists.txt  README.md  main.c  pm_static_nrf52840dk_nrf52840.yml  prj.conf
examples/zephyr/advertising-mode/: CMakeLists.txt  Kconfig  README.md  main.c
examples/zephyr/boards/: nrf52840dk_nrf52840.conf  nrf52840dongle_nrf52840.conf  nucleo_l433rc_p.conf
examples/zephyr/boards/ezurio/bl54l15_dvk/: Kconfig  Kconfig.bl54l15_dvk  Kconfig.defconfig  bl54l15_dvk_nrf54l15-common.dtsi  bl54l15_dvk_nrf54l15_cpuapp.dts  bl54l15_dvk_nrf54l15_cpuapp.yaml  bl54l15_dvk_nrf54l15_cpuapp_ns.dts  bl54l15_dvk_nrf54l15_cpuapp_ns.yaml  bl54l15_dvk_nrf54l15_cpuflpr.dts  bl54l15_dvk_nrf54l15_cpuflpr.yaml  bl54l15_dvk_nrf54l15_cpuflpr_xip.dts  bl54l15_dvk_nrf54l15_cpuflpr_xip.yaml  board.cmake  board.yml  nrf54l15_cpuapp_common.dtsi
examples/zephyr/boards/ezurio/bl54l15u_dvk/: Kconfig  Kconfig.bl54l15u_dvk  Kconfig.defconfig  bl54l15u_dvk_nrf54l15-common.dtsi  bl54l15u_dvk_nrf54l15_cpuapp.dts  bl54l15u_dvk_nrf54l15_cpuapp.yaml  bl54l15u_dvk_nrf54l15_cpuapp_ns.dts  bl54l15u_dvk_nrf54l15_cpuapp_ns.yaml  bl54l15u_dvk_nrf54l15_cpuflpr.dts  bl54l15u_dvk_nrf54l15_cpuflpr.yaml  bl54l15u_dvk_nrf54l15_cpuflpr_xip.dts  bl54l15u_dvk_nrf54l15_cpuflpr_xip.yaml  board.cmake  board.yml  nrf54l15_cpuapp_common.dtsi
examples/zephyr/boards/fanstel/fanstel_ev_bm15m/: Kconfig  Kconfig.defconfig  Kconfig.fanstel_ev_bm15m  board.cmake  board.yml  fanstel_ev_bm15m_nrf54l15-common.dtsi  fanstel_ev_bm15m_nrf54l15-pinctrl.dtsi  fanstel_ev_bm15m_nrf54l15_cpuapp.dts  fanstel_ev_bm15m_nrf54l15_cpuapp.yaml  fanstel_ev_bm15m_nrf54l15_cpuapp_ns.dts  fanstel_ev_bm15m_nrf54l15_cpuapp_ns.yaml  fanstel_ev_bm15m_nrf54l15_cpuflpr.dts  fanstel_ev_bm15m_nrf54l15_cpuflpr.yaml  fanstel_ev_bm15m_nrf54l15_cpuflpr_xip.dts  fanstel_ev_bm15m_nrf54l15_cpuflpr_xip.yaml  nrf54l15_cpuapp_common.dtsi
examples/zephyr/boards/insightsip/isp2454_lx_eb/: Kconfig  Kconfig.defconfig  Kconfig.isp2454_lx_eb  board.cmake  board.yml  isp2454_lx_eb_nrf54l15-common.dtsi  isp2454_lx_eb_nrf54l15-pinctrl.dtsi  isp2454_lx_eb_nrf54l15_cpuapp.dts  isp2454_lx_eb_nrf54l15_cpuapp.yaml  isp2454_lx_eb_nrf54l15_cpuapp_ns.dts  isp2454_lx_eb_nrf54l15_cpuapp_ns.yaml  (+5 more)
examples/zephyr/coexistence/: CMakeLists.txt  Kconfig  README.md  coexistence.conf  hr.c  main.c
examples/zephyr/common/: config.cmake  flash_debug.cmake
examples/zephyr/common/config/: Kconfig  pm_static_fanstel_ev_bm15m_nrf54l15_cpuapp.yml  pm_static_kkm_k7p54l_bcn_nrf54l15_cpuapp.yml  pm_static_nrf52833dk_nrf52833.yml  pm_static_nrf52840dongle_nrf52840.yml  prj.conf
examples/zephyr/devboard-demo/: CMakeLists.txt  blecon_led.c  blecon_led.h  devboard-demo.conf  main.c
examples/zephyr/hello-world/: CMakeLists.txt  main.c
examples/zephyr/large-request/: CMakeLists.txt  main.c
examples/zephyr/memfault/: CMakeLists.txt  main.c  memfault.conf  ota.c  ota.h  sysbuild.conf
examples/zephyr/memfault/config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h  memfault_trace_reason_user_config.def
examples/zephyr/memfault/sysbuild/mcuboot/: prj.conf
examples/zephyr/memfault/sysbuild/mcuboot/boards/: bl54l15_dvk_nrf54l15_cpuapp.conf  nrf52840dk_nrf52840.conf  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
examples/zephyr/scanner/: CMakeLists.txt  main.c
include/blecon/: blecon.h  blecon_advertising_mode.h  blecon_bearer.h  blecon_bluetooth_types.h  blecon_buffer.h  blecon_buffer_queue.h  blecon_defs.h  blecon_download_client.h  blecon_error.h  blecon_journal.h  blecon_list.h  blecon_memfault_client.h  blecon_memfault_ota_client.h  blecon_memory.h  blecon_modem.h  blecon_request.h  blecon_request_frame.h  blecon_request_processor.h  blecon_request_status_code.h  blecon_rpc_status_codes.h  blecon_scheduler.h  blecon_task_queue.h  blecon_util.h
include/blecon/port/: blecon_bluetooth.h  blecon_crypto.h  blecon_event_loop.h  blecon_ext_modem_transport.h  blecon_memfault.h  blecon_mutex.h  blecon_nfc.h  blecon_nvm.h  blecon_timer.h
lib/: LICENSE.md
ports/nrf5/: CMakeLists.txt  nrf-toolchain.cmake
ports/nrf5/include/blecon_nrf5/: blecon_nrf5_bluetooth.h  blecon_nrf5_crypto.h  blecon_nrf5_event_loop.h  blecon_nrf5_gatts_bearer.h  blecon_nrf5_l2cap_server.h  blecon_nrf5_nfc.h  blecon_nrf5_nvm.h  blecon_nrf5_timer.h
ports/nrf5/src/: blecon_nrf5_aead_cipher.h  blecon_nrf5_bluetooth.c  blecon_nrf5_bluetooth_common.h  blecon_nrf5_crypto.c  blecon_nrf5_event_loop.c  blecon_nrf5_gatts_bearer.c  blecon_nrf5_l2cap_server.c  blecon_nrf5_mutex.c  blecon_nrf5_nfc.c  blecon_nrf5_nvm.c  blecon_nrf5_timer.c
ports/zephyr/: CMakeLists.txt  Kconfig
ports/zephyr/include/blecon_zephyr/: blecon_zephyr.h  blecon_zephyr_bluetooth.h  blecon_zephyr_crypto.h  blecon_zephyr_event_loop.h  blecon_zephyr_ext_modem_uart_transport.h  blecon_zephyr_gatts_bearer.h  blecon_zephyr_l2cap_bearer.h  blecon_zephyr_l2cap_server.h  blecon_zephyr_memfault.h  blecon_zephyr_memfault_ota.h  blecon_zephyr_mutex.h  blecon_zephyr_nfc.h  blecon_zephyr_nvm.h  blecon_zephyr_timer.h
ports/zephyr/src/: blecon_zephyr.c  blecon_zephyr_aead_cipher.h  blecon_zephyr_bluetooth.c  blecon_zephyr_bluetooth_common.h  blecon_zephyr_crypto.c  blecon_zephyr_error.c  blecon_zephyr_event_loop.c  blecon_zephyr_ext_modem_uart_transport.c  blecon_zephyr_gatts_bearer.c  blecon_zephyr_l2cap_bearer.c  blecon_zephyr_l2cap_server.c  blecon_zephyr_memfault.c  blecon_zephyr_memfault_ota.c  blecon_zephyr_misc.c  blecon_zephyr_mutex.c  blecon_zephyr_nfc.c  blecon_zephyr_nvm.c  blecon_zephyr_timer.c
zephyr/: module.yml
(+116 files in other folders)
